fix: because of overflow='hidden' focus-border wasn't showed complete

--- a/Tool/frontend/src/pages/Explorer/diffViewer.module.css
+++ b/Tool/frontend/src/pages/Explorer/diffViewer.module.css
@@ -104,7 +104,6 @@
     gap: 2px;
     border: solid #ccc;
     border-width: 0 0 1px 1px;
-    overflow: hidden;
 }
 
 
